--- a/scripts/debug/.env
+++ b/scripts/debug/.env
@@ -8,3 +8,4 @@ TYPE6_POSTGRES_IP=localhost
 # SELF
 TYPE6M_ISSUER_URL=http://localhost:7777
 spring.profiles.active=debug
+TYPE6_CLIENT_CORS_ALLOWED_ORIGIN=http://localhost:3000
