--- a/TypeSixMCore/src/main/resources/application.properties
+++ b/TypeSixMCore/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8888
 spring.profiles.active=${TYPE6_ACTIVE_PROFILE}
+type-6.client-cors-allowed-origin=${TYPE6_CLIENT_CORS_ALLOWED_ORIGIN}
 
 #
 # Database
