--- a/scripts/k8s/type-6-m.yaml
+++ b/scripts/k8s/type-6-m.yaml
@@ -18,7 +18,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: TYPE6_CLIENT_CORS_ALLOWED_ORIGIN
-              value: https://netmapa.online
+              value: https://mipt-match.ru
             - name: TYPE6_ACTIVE_PROFILE
               value: "release"
             - name: TYPE6_DATABASE_USER
