separate db into submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "TypeSixDataBaseCommon"]
 	path = TypeSixDataBaseCommon
 	url = https://github.com/timattt/TypeSixDataBaseCommon.git
+[submodule "TypeSevenDataBaseCommon"]
+	path = TypeSevenDataBaseCommon
+	url = https://github.com/timattt/TypeSevenDataBaseCommon.git
