--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,6 @@
     <modules>
         <module>TypeSevenMCore</module>
         <module>TypeSixDataBaseCommon</module>
+        <module>TypeSevenDatabaseCommon</module>
     </modules>
 </project>
