--- a/TypeSevenDatabaseCommon/pom.xml
+++ b/TypeSevenDatabaseCommon/pom.xml
@@ -3,40 +3,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.shlimtech</groupId>
-        <artifactId>TypeSevenM</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.2</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.shlimtech.core</groupId>
-    <artifactId>TypeSevenMCore</artifactId>
+    <groupId>org.shlimtech.common</groupId>
+    <artifactId>TypeSevenDatabaseCommon</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>TypeSevenMCore</name>
-    <description>TypeSevenMCore</description>
+    <name>TypeSevenDatabaseCommon</name>
+    <description>TypeSevenDatabaseCommon</description>
     <properties>
+        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
         <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-registry-prometheus</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -56,12 +40,6 @@
         <dependency>
             <groupId>org.shlimtech.common</groupId>
             <artifactId>TypeSixDataBaseCommon</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.shlimtech.common</groupId>
-            <artifactId>TypeSevenDatabaseCommon</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
