dto bug fix and oauth2 resource server tests

--- a/TypeSevenMCore/src/main/resources/application.properties
+++ b/TypeSevenMCore/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8888
 spring.profiles.active=${TYPE7_ACTIVE_PROFILE}
 type-7.client-cors-allowed-origin=${TYPE7_CLIENT_CORS_ALLOWED_ORIGIN}
+type-7.type-7-d-host=${TYPE7D_HOST}
+type-7.call-type-7-d=true
 
 #
 # Database
