--- a/scripts/debug/.env
+++ b/scripts/debug/.env
@@ -9,3 +9,4 @@ TYPE6_POSTGRES_IP=localhost
 TYPE7M_ISSUER_URL=http://localhost:7777
 spring.profiles.active=debug
 TYPE7_CLIENT_CORS_ALLOWED_ORIGIN=http://localhost:3000
+TYPE7D_HOST=http://localhost:8000
