--- a/scripts/k8s/type-7-m.yaml
+++ b/scripts/k8s/type-7-m.yaml
@@ -17,6 +17,8 @@ spec:
           image: docker.io/timattt/type-7-m:latest
           imagePullPolicy: Always
           env:
+            - name: TYPE7D_HOST
+              value: http://10.96.216.217:443
             - name: TYPE7_CLIENT_CORS_ALLOWED_ORIGIN
               value: https://mipt-match.ru
             - name: TYPE7_ACTIVE_PROFILE
